--- a/style.css
+++ b/style.css
@@ -98,34 +98,66 @@ button{
 }
 .project{
     
-    height: 300px;
+    height: 270px;
     display: flex;
-    margin: 40px 140px;
+    margin: 40px 130px;
     justify-content: space-between;
+    padding-bottom: 130px;
 }
 .project-item1{
+    width: 280px;
+    height: 100%;
+    padding: 55px 20px 0px 20px;
+}
+.project-item1 p{
+    text-align: justify;
+}
+#colour-1{
     background-color: #FFC0CB;
-    width: 310px;
-    height: 100%;
-    padding-left: 20px;
-    padding-top: 60px;
-  
+
+
 }
-.project-item2{
-    
+
+#colour-2{
     background-color: #E0FFFF;
-    width: 310px;
-    height: 100%;
-    padding-left: 20px;
-    padding-top: 60px;
+    
 
 }
-.project-item3{
-    background-color: #FAF0E6;
-    width: 310px;
-    height: 100%;
-    padding-left: 20px;
-    padding-top: 60px;
 
+#colour-3{
+    background-color: #FAF0E6;
+
+}
+.about{
+   
+    height: 550px;
+    margin: 0 100px;
+    display: flex;
+    
+    
+
+}
+h1{
+    text-align: center;
+}
+p{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.about-text{
+    width: 50%;
+    background-color: #ADD8E6;
+}
+
+
+.about-text h1{
+    text-align: center;
+    background-color: #761f8c;
+    padding: 10px 20px 10px 10px ;
+    margin-top: -1px;
+    border:2px solid #ffb7c5;
+    color: white;
+    
+    
 }
 
